adding get user profile route, refactor actor, customer, staff, store controllers and updating api specs
