# openapi/apis/staff/summary.yaml
@@ -1,6 +1,6 @@
 get:
   summary: Get list of all staff (optionally filter by residential state and city)
-  operationId: getStaff
+  operationId: getStaffSummary
   tags:
     - staff
   parameters:
@@ -111,88 +111,24 @@ get:
               items:
                 type: array
                 items:
-                  $ref: ../../components/staff/staffSummary.yaml
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      format: number
+                    firstName:
+                      type: string
+                    lastName:
+                      type: string
+                    email:
+                      type: string
+                      format: email
+                    active:
+                      type: boolean
               length:
                 type: integer
               pagination:
                 $ref: ../../components/pagination.yaml
-    '400':
-      $ref: ../../components/error/badRequest.yaml
-    '401':
-      $ref: ../../components/error/unauthorized.yaml
-    '403':
-      $ref: ../../components/error/forbidden.yaml
-    '500':
-      $ref: ../../components/error/internalServerError.yaml
-post:
-  summary: Add staff member
-  operationId: createStaff
-  tags:
-    - staff
-  requestBody:
-    description: Payload for the new staff
-    required: true
-    content:
-      application/json:
-        schema:
-          type: object
-          properties:
-            firstName:
-              type: string
-            lastName:
-              type: string
-            email:
-              type: string
-            phoneNumber:
-              type: string
-            avatar:
-              type: string
-              format: uri
-            storeId:
-              type: integer
-              format: number
-            address:
-              type: object
-              properties:
-                addressLine:
-                  type: string
-                cityName:
-                  type: string
-                stateName:
-                  type: string
-                postalCode:
-                  type: string
-  responses:
-    '201':
-      description: Successfully created staff
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              id:
-                type: string
-                format: number
-                readOnly: true
-              firstName:
-                type: string
-              lastName:
-                type: string
-              email:
-                type: string
-                format: email
-              active:
-                type: boolean
-              phoneNumber:
-                type: string
-              avatar:
-                type: string
-                format: uri
-              storeId:
-                type: integer
-                format: number
-              address:
-                $ref: ../../components/address/address.yaml
     '400':
       $ref: ../../components/error/badRequest.yaml
     '401':
